# StudyHub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  start.sh
backend/: Dockerfile  celery_worker.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  db_migrate.py  extensions.py  tasks.py
backend/app/dao/: __init__.py  assignment_dao.py  base_dao.py  binder_dao.py  deck_dao.py  diagram_dao.py  evaluation_dao.py  exam_dao.py  flashcard_dao.py  group_dao.py  note_dao.py  pdf_dao.py  quiz_dao.py  revision_dao.py  search_dao.py  study_session_dao.py  tag_dao.py  user_dao.py
backend/app/middlewares/: __init__.py  error_handler.py  (+2 more)
backend/scratch/: scratch_debug.py
backend/scripts/: bench.py  migrate_binder_tags.py
backend/tests/: conftest.py  test_agent_discovery.py  test_ai_service.py  test_assignment_revision.py  test_assignment_tasks.py  test_auth.py  test_auto_migrations.py  test_binder_items.py  test_binder_study.py  test_binders_and_decks.py  test_binders_crud.py  test_class.py  test_class_management.py  test_class_qa.py  test_community.py  test_decks_query_budget.py  test_engagement.py  test_evaluation_endpoints.py  test_evaluation_models.py  test_evaluation_service.py  test_exam.py  test_exam_conformance.py  test_flashcard_advanced.py  test_flashcard_generation.py  test_flashcards_study.py  test_focus.py  test_focus_query_budget.py  test_group.py  test_heatmap_schema.py  test_import.py  test_logging_config.py  test_notes.py  test_pdfs.py  test_placeholders.py  test_planning.py  test_planning_advance.py  test_public_class_follow.py  test_quiz.py  test_quiz_conformance.py  test_regression.py  (+19 more)
(+304 files in other folders)
